infrastructure/prod/kubernetes/user-service-manifests/user-service-deployment-v1.0.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-v1.0
  namespace: prod
  labels:
    app: user-service
    version: v1.0
spec:
  selector:
    matchLabels:
      app: user-service
      version: v1.0
  template:
    metadata:
      name: user-service-v1.0
      labels:
        app: user-service
        version: v1.0
    spec:
      containers:
        - name: user-service
          image: acrdevopsprojectprod.azurecr.io/user-service:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            runAsNonRoot: true
            runAsUser: 1001 # Created user in Docker image
            runAsGroup: 1001
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
      imagePullSecrets: # Setting credentials to Azure Container Registry, synchronized with Key Vault
        - name: azurecr-credentials
      restartPolicy: Always
      serviceAccountName: user-service
