infrastructure/prod/kubernetes/user-service-manifests/user-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: prod
  labels:
    app: user-service
    service: user-service
spec:
  selector:
    app: user-service # One service per all deployments releases
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
