infrastructure/prod/kubernetes/user-service-manifests/user-service-network-policy-v1.0.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-service-v1.0
  namespace: prod
spec:
  podSelector:
    matchLabels:
      app: user-service
      version: v1.0
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080  # Service port
  egress:
    - ports:
        - protocol: TCP
          port: 5672  # Default RabbitMQ broker port
        - protocol: TCP
          port: 5432  # Default Postgresql port
